--- a/mobile/teacherViews/homeView.html
+++ b/mobile/teacherViews/homeView.html
@@ -8,7 +8,7 @@
     <li ng-show='st==0'>
         <ul>
             <li>
-                <h1 ng-click='sub1()' >操作系统</h1>
+                <h1 ng-click='sub1()' >化晨鑫</h1>
                 <ul class='questionList'>
                     <li>
                         <h4 ng-click='par_btn(0)'>第一章</h4>
@@ -31,7 +31,7 @@
                 </ul>
             </li>
             <li>
-                <h1 ng-click='sub2()'>javascript</h1>
+                <h1 ng-click='sub2()'>刘丽娟</h1>
                 <ul class='questionList'>
                     <li>
                         <h4 ng-click='par_btn(0)'>第一章</h4>
