--- a/mobile/studentViews/informView.html
+++ b/mobile/studentViews/informView.html
@@ -4,6 +4,10 @@
         <li ng-class='{true:"active",false:""}[ann_st==1]' ng-click='ann_tab(1)'>已答疑</li>
     </ul>
     <button type="" class='new_iform' ng-click='addInform()'>我有疑问</button>
+    <div class="search">
+        <input type="text" placeholder="请输入关键字" ng-model='searchVal' name="">
+        <button type="" ng-click='searchInform()'>搜索</button>
+    </div>
     <ul class='ann_content clear'>
         <li ng-repeat='item in ann_date' ng-click='showQuestion(item.solve_id,item.solution)'  class="clear">
             <a href="" title="">{{item.solveinfo}}</a>
