--- a/mobile/teacherViews/tipView.html
+++ b/mobile/teacherViews/tipView.html
@@ -5,6 +5,10 @@
         <li ng-class='{true:"active",false:""}[ann_st==2]' ng-click='ann_tab(2)'>其他</li>
     </ul>
     <button type="" class='new_ann' ng-click='addAnn()'>发布新公告</button>
+    <div class="search">
+        <input type="text" placeholder="请输入关键字" name="">
+        <button type="" ng-click='searchAnn()'>搜索</button>
+    </div>
     <ul class='ann_content clear'>
        <li ng-repeat='item in getData' ng-click='showAnn(item.ann_content)' class="clear">
             <a href="" title="">{{item.ann_title}}</a>
